# iso15118

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/static/: app.js  styles.css
app/templates/: index.html
configs/: feature_config.yaml  model_config.yaml  serving_config.yaml
src/data/: ingest.py
src/experimentation/: ab_simulator.py  incrementality.py
src/features/: basket.py  category.py  demographics.py  pipeline.py  rfm.py  temporal.py
src/models/: base.py  evaluate.py  s_learner.py  t_learner.py  train.py  x_learner.py
src/monitoring/: drift.py
src/serving/: app.py  dependencies.py  schemas.py
tests/unit/: test_features.py  test_models.py  test_serving.py
